# modelcurl

./: .gitignore  DESIGN.md  LICENSE  QUICKSTART.md  README.md  index.html  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/icons/: icon.icns
src-tauri/src/: commands.rs  http.rs  main.rs  metrics.rs  provider.rs  types.rs
src/components/: EndpointModal.tsx  ParametersPanel.tsx  PromptInput.tsx  ReasoningControls.tsx  ResponseDisplay.tsx  Sidebar.tsx
src/components/UI/: Button.tsx  Input.tsx  Label.tsx  Textarea.tsx
src/hooks/: useLLMRequest.ts
src/stores/: endpointStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: provider.ts
